# nas-md

./: .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  __init__.py  _check.py  _git_push.py  _test_write.py  compose.yaml  config.json  eslint.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  search.db  start.py
.github/workflows/: ci.yml  docker.yml
cli/: __init__.py
config/: __init__.py
db/: __init__.py
docs/: 2026-06-04-phase2-core-design.md  2026-06-04-phase2-core-plan.md  2026-06-04-phase2-links-design.md  architecture.md  frontend-refactor-plan-v2.md  frontend-refactor-plan.md  mount-api.md  multi-user-isolation-design.md  nas-md改造.md  planning.md  silverbullet-reference.md  web-frontend-requirements.md  your-own-server.md
fs/: __init__.py
habits/: __init__.py  render.py
i18n/: __init__.py  emojis.json
journal/: __init__.py
nas_md/: __init__.py  _folder_template.md
nas_md/cli/: __init__.py  __main__.py
nas_md/config/: __init__.py
nas_md/db/: __init__.py
nas_md/fs/: __init__.py
nas_md/habits/: render.py
nas_md/pkg/: __init__.py
nas_md/plugins/: __init__.py
nas_md/search/: __init__.py  extract.py
nas_md/server/: __init__.py  router.py
nas_md/userconfig/: __init__.py
pkg/tg/: upd.py  (+3 more)
plugins/: __init__.py
server/: __init__.py
stats/: __init__.py
storage/: 欢迎.md
sync/: __init__.py
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_db.py  test_extract.py  test_fs.py  test_habits.py  test_i18n.py  test_journal.py  test_multi_user_isolation.py  test_plugins.py  test_router.py  test_search.py  test_server.py  test_similarity.py  test_slice.py  test_stats.py  test_sync.py  test_tg_types.py  test_tgtxt.py  test_txt_md.py  test_txt_str.py  test_userconfig.py  test_webserver.py  test_worker.py
userconfig/: __init__.py
web/: app.css  app.js  editor.js  files.js  index.html
webserver/: __init__.py
worker/: __init__.py
(+25 files in other folders)
