[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-md"
version = "0.1.0"
description = "files.md - personal knowledge management system"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["nas_md*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
  | \.pytest_cache
  | \.egg-info
  | web
  | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", ".git", "__pycache__", ".pytest_cache", ".egg-info", "web", "node_modules"]
src = ["nas_md", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in default arguments
    "SIM108", # use ternary operator (prefer if/else for readability)
    "RUF001", # ambiguous unicode character in string
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
    "E402",   # module import not at top (conditional imports)
    "SIM115", # open file with context handler
    "B904",   # raise without from inside except
    "RUF012", # mutable class default (dataclasses)
    "SIM117", # multiple with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "F401"]
"nas_md/server/__init__.py" = ["F401"]

[tool.ruff.lint.flake8-type-checking]
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
